--- a/Lab1/Lab1/App.xaml
+++ b/Lab1/Lab1/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Lab1"
-             StartupUri="MainWindow.xaml">
+             StartupUri="InitWindow.xaml">
     <Application.Resources>
         <ControlTemplate x:Key="DeleteButton" TargetType="Button">
             <Border Height="{TemplateBinding Height}" Width="{TemplateBinding Width}" CornerRadius="10" x:Name="Butt">
@@ -244,5 +244,46 @@
                 </Grid>
             </Border>
         </ControlTemplate>
+        <ControlTemplate x:Key="PositionInput">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBox Margin="10 5" Template="{StaticResource Input}" Grid.Column="0" Text="{Binding X}" Background="#404040"/>
+                <TextBox Margin="10 5" Template="{StaticResource Input}" Grid.Column="1" Text="{Binding Y}" Background="#404040"/>
+                <TextBox Margin="10 5" Template="{StaticResource Input}" Grid.Column="2" Text="{Binding Z}"  Background="#404040"/>
+            </Grid>
+        </ControlTemplate>
+        <ControlTemplate x:Key="RotationInput">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBox Margin="10 5" Template="{StaticResource Input}" Grid.Column="0" Text="{Binding X}" Background="#404040"/>
+                <TextBox Margin="10 5" Template="{StaticResource Input}" Grid.Column="1" Text="{Binding Y}" Background="#404040"/>
+                </Grid>
+        </ControlTemplate>
+        <ControlTemplate x:Key="Object3D" TargetType="ContentControl">
+            <Border Height="{TemplateBinding Height}" Background="#202020" CornerRadius="20">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition/>
+                        <RowDefinition Height="2*"/>
+                    </Grid.RowDefinitions>
+                    <Label Content="{Binding Name}" Template="{StaticResource Lable}" FontSize="16"/>
+                    <Label  Content="Position" Grid.Row="1" Template="{StaticResource Lable}" FontSize="16"/>
+                    <Label  Content="Rotation" Grid.Row="3" Template="{StaticResource Lable}" FontSize="16"/>
+                    <ContentControl Grid.Row="2" Template="{StaticResource PositionInput}" DataContext="{Binding Position, Mode=TwoWay}"/>
+                    <ContentControl Grid.Row="4" Template="{StaticResource RotationInput}" DataContext="{Binding Rotation, Mode=TwoWay}"/>
+                </Grid>
+            </Border>
+        </ControlTemplate>
+
     </Application.Resources>
 </Application>
